item-detail alignment fixed

--- a/css/grid.css
+++ b/css/grid.css
@@ -86,6 +86,10 @@
 		width: 100%;
 	}
 
+	.col-5of10{
+		width: 100%;
+	}
+
 	.col-6of10{
 		width: 100%;
 	}
